# classicle

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
classicle/: __init__.py  frozen_instance.py  frozen_namespace.py
tests/: __init__.py  test_frozen_instance.py  test_frozen_namespace.py  test_static_analysis.py
